--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+.my-paragraph {
+color:blue;
+} 
 
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
